--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -38,7 +38,7 @@
         android:background="@drawable/round_bg"
         android:padding="15dp"
         android:layout_margin="10dp"
-        android:hint="পরিমাণ e.g কেজি"
+        android:hint="পরিমাণ e.g কেজি/পিস"
         android:textColor="#000"
         android:textColorHint="#959393"
         android:inputType="text"/>
@@ -62,10 +62,10 @@
         android:background="@drawable/round_bg"
         android:padding="15dp"
         android:layout_margin="10dp"
-        android:hint="দাম e.g প্রতি কেজি"
+        android:hint="দাম e.g প্রতি কেজি/পিস"
         android:textColor="#000"
         android:textColorHint="#959393"
-        android:inputType="numberDecimal"/>
+        android:inputType="text"/>
 
     <LinearLayout
         android:layout_margin="10dp"
