--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -259,6 +259,7 @@
                     android:layout_weight="1">
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/questionAndAnswer"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
@@ -266,7 +267,6 @@
                         android:elevation="10dp"
                         app:cardBackgroundColor="#FCFDFD"
                         app:cardCornerRadius="5dp">
-                       >
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -274,21 +274,20 @@
                             android:orientation="vertical">
 
                             <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_weight=".20"
-                                android:src="@drawable/ic_launcher_background"
 
-                                ></ImageView>
+                                android:layout_width="match_parent"
+                                android:layout_height="160dp"
+                                android:layout_weight=".20"
+                                android:src="@drawable/qusandans"/>
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_weight=".80"
                                 android:gravity="center"
-                                android:text="This is Title"
+                                android:text="প্রশ্ন ও উত্তর"
                                 android:textStyle="bold"
-                                android:textColor="@color/black"></TextView>
+                                android:textColor="@color/black"/>
 
                         </LinearLayout>
 
