--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -259,7 +259,7 @@
                     android:layout_weight="1">
 
                     <androidx.cardview.widget.CardView
-                        android:id="@+id/questionAndAnswer"
+                        android:id="@+id/questionAnswer"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
